--- a/index.html
+++ b/index.html
@@ -6,6 +6,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Easy Order</title>
   <link rel="stylesheet" href="styles.css" />
+<style>
+  #orderSummary {
+    font-size: 18px;
+    line-height: 1.6;
+    font-family: Arial, sans-serif;
+  }
+
+  @media print {
+    body {
+      font-family: Arial, sans-serif;
+      font-size: 18px;
+      line-height: 1.6;
+      padding: 20px;
+    }
+    #orderSummary {
+      font-size: 18px;
+    }
+  }
+</style>
 </head>
 <body>
   <h1>Easy Order App</h1>
